REGRESSION (r150651): Web Audio doesn't work at all (silence or squawks) on Mountain Lion https://bugs.webkit.org/show_bug.cgi?id=117652

Reviewed by Eric Carlson.

r150651 disabled setting the buffer size to a large value, but in so doing, also
disabled setting the buffer size to a small value for Web Audio. Narrow the Mountain
Lion protection to just the <video> element case.

* platform/audio/mac/AudioSessionManagerMac.cpp:
(AudioSessionManager::updateSessionState):

Canonical link: https://commits.webkit.org/135809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151606 268f45cc-cd09-0410-ab3c-d52691b4dbfc