Source/WebCore/platform/audio/mac/AudioSessionManagerMac.cpp
@@ -37,13 +37,13 @@ static const size_t kLowPowerVideoBufferSize = 4096;
 
 void AudioSessionManager::updateSessionState()
 {
-    // FIXME: <http://webkit.org/b/116725> Figure out why enabling the code below
-    // causes media LayoutTests to fail on 10.8.
-#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090
     LOG(Media, "AudioSessionManager::updateSessionState() - types: Video(%d), Audio(%d), WebAudio(%d)", m_typeCount.count(Video), m_typeCount.count(Audio), m_typeCount.count(WebAudio));
 
     if (has(WebAudio))
         AudioSession::sharedSession().setPreferredBufferSize(kWebAudioBufferSize);
+    // FIXME: <http://webkit.org/b/116725> Figure out why enabling the code below
+    // causes media LayoutTests to fail on 10.8.
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090
     else if (has(Video) || has(Audio))
         AudioSession::sharedSession().setPreferredBufferSize(kLowPowerVideoBufferSize);
 #endif
